--- a/index.html
+++ b/index.html
@@ -3,26 +3,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./output.css">
+    <!-- <link rel="stylesheet" href="./output.css"> -->
     <link rel="stylesheet" href="./style.css">
     <title>PetMe</title>
 </head>
 <body>
-    <nav class=" bg-gray-800 flex items-center justify-between md:h-16 md:px-2">
-        <div class=" logo font-bold text-xl text-white">PetMe</div>
-        <div class=" nav-links md:w-3/5">
-            <ul class=" flex items-center justify-evenly text-white ">
-                <li><a class="hover:border-b-2 hover:border-solid hover:border-white" href="#home">Home</a></li>
-                <li><a class="hover:border-b-2 hover:border-solid hover:border-white" href="#post-animals">Post Animals</a></li>
-                <li><a class="hover:border-b-2 hover:border-solid hover:border-white" href="reportstary.html">Report Critical Stray Animals</a></li>
-                <li><a class="hover:border-b-2 hover:border-solid hover:border-white" href="#about">About Us</a></li>
-                <li><a class="hover:border-b-2 hover:border-solid hover:border-white" href="#contact">Contact Us</a></li>
-              </ul>
+    <header class="text-gray-400 bg-gray-900 body-font">
+        <div
+          class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center"
+        >
+          <a
+            class="flex title-font font-medium items-center text-white mb-4 md:mb-0"
+            href="#"
+          >
+            <img
+              class="rounded-full w-1/6 h-1/6"
+              src="/Assets/Images/Pet Care Logo.png"
+              alt="logo"
+            />
+            <span class="ml-3 text-xl">PetMe</span>
+          </a>
+          <nav
+            class="md:ml-auto flex flex-wrap items-center text-base justify-center"
+          >
+            <a href="/" class="mr-5 hover:text-white">Home</a>
+            <a href="./donate.html" class="mr-5 hover:text-white">Donate Animals</a>
+            <a href="./reportstary.html" class="mr-5 hover:text-white">Emergency Report</a>
+            <a href="#about" class="mr-5 hover:text-white">About Us</a>
+          </nav>
+          <a href="#contact">
+          <button class="inline-flex items-center bg-gray-800 border-0 py-1 px-3 focus:outline-none hover:bg-gray-700 rounded text-base mt-4 md:mt-0">Contact Us
+            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
+              <path d="M5 12h14M12 5l7 7-7 7"></path>
+            </svg>
+          </button>
+        </a>
         </div>
-    </nav>
+      </header>
     <section class=" flex flex-wrap gap-2 px-2 py-12 flex-auto">
         <div class="rounded-lg shadow-lg bg-white max-w-xs">
-            <a href="#!">
+            <a href="#">
                 <img class="rounded-t-lg" src="Assets/Images/dog.jpg" alt=""/>
             </a>
             <div class="p-4 flex flex-col gap-2">
@@ -50,7 +70,7 @@
             </div>
         </div>
         <div class="rounded-lg shadow-lg bg-white max-w-xs">
-            <a href="#!">
+            <a href="#">
                 <img class="rounded-t-lg" src="Assets/Images/dog.jpg" alt=""/>
             </a>
             <div class="p-4 flex flex-col gap-2">
@@ -78,7 +98,7 @@
             </div>
         </div>
         <div class="rounded-lg shadow-lg bg-white max-w-xs">
-            <a href="#!">
+            <a href="#">
                 <img class="rounded-t-lg" src="Assets/Images/dog.jpg" alt=""/>
             </a>
             <div class="p-4 flex flex-col gap-2">
@@ -106,7 +126,7 @@
             </div>
         </div>
         <div class="rounded-lg shadow-lg bg-white max-w-xs">
-            <a href="#!">
+            <a href="#">
                 <img class="rounded-t-lg" src="Assets/Images/dog.jpg" alt=""/>
             </a>
             <div class="p-4 flex flex-col gap-2">
@@ -134,7 +154,7 @@
             </div>
         </div>
         <div class="rounded-lg shadow-lg bg-white max-w-xs">
-            <a href="#!">
+            <a href="#">
                 <img class="rounded-t-lg" src="Assets/Images/dog.jpg" alt=""/>
             </a>
             <div class="p-4 flex flex-col gap-2">
@@ -162,7 +182,7 @@
             </div>
         </div>
         <div class="rounded-lg shadow-lg bg-white max-w-xs">
-            <a href="#!">
+            <a href="#">
                 <img class="rounded-t-lg" src="Assets/Images/dog.jpg" alt=""/>
             </a>
             <div class="p-4 flex flex-col gap-2">
@@ -190,7 +210,7 @@
             </div>
         </div>
         <div class="rounded-lg shadow-lg bg-white max-w-xs">
-            <a href="#!">
+            <a href="#">
                 <img class="rounded-t-lg" src="Assets/Images/dog.jpg" alt=""/>
             </a>
             <div class="p-4 flex flex-col gap-2">
@@ -218,7 +238,7 @@
             </div>
         </div>
         <div class="rounded-lg shadow-lg bg-white max-w-xs">
-            <a href="#!">
+            <a href="#">
                 <img class="rounded-t-lg" src="Assets/Images/dog.jpg" alt=""/>
             </a>
             <div class="p-4 flex flex-col gap-2">
@@ -246,7 +266,7 @@
             </div>
         </div>
         <div class="rounded-lg shadow-lg bg-white max-w-xs">
-            <a href="#!">
+            <a href="#">
                 <img class="rounded-t-lg" src="Assets/Images/dog.jpg" alt=""/>
             </a>
             <div class="p-4 flex flex-col gap-2">
@@ -274,7 +294,7 @@
             </div>
         </div>
         <div class="rounded-lg shadow-lg bg-white max-w-xs">
-            <a href="#!">
+            <a href="#">
                 <img class="rounded-t-lg" src="Assets/Images/dog.jpg" alt=""/>
             </a>
             <div class="p-4 flex flex-col gap-2">
@@ -321,6 +341,5 @@
                 </form>
         </article>
     </section>
-</body>
 </body>
 </html>
