--- a/adopt.html
+++ b/adopt.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./reportstary.css">
 
 
-  <title>Report Critical stray animal</title>
+  <title>Adopt Me</title>
 </head>
 
 <body>
@@ -24,9 +24,10 @@
   </nav>
   <div class="container">
     <header>
-      <h1 id="title">Report any Critical stray animal to the nearest Animal Care centres</h1>
-      <p id="description">The details you provide with this form will be used to reach the nearest authority at the
-        location of the stray animal.</p>
+      <h1 id="title">Adopt Your Favourite Pet</h1>
+      <p id="description">The details you provide with this form will be used to reach the nearest
+        authority/organization at the
+        location of the pet.</p>
     </header>
     <form id="survey-form" action="https://formspree.io/f/xayaokzl" method="POST">
       <div class="form-group">
@@ -54,39 +55,11 @@
           placeholder="Enter the nearest landmark to identify the location." />
       </div>
       <div class="form-group">
-        <label for="email">Which type of stray animal?</label>
-        <select id="dropdown" name="role" class="form-control" required>
-          <option disabled selected value>Select stray animal</option>
-          <option value="student">Dog</option>
-          <option value="artist">Cat</option>
-          <option value="graphic_designer">Cow</option>
-          <option value="other">Pig</option>
-          <option value="other">Other</option>
-        </select>
-      </div>
-
-      <div class="form-group">
-        <p>What is the condition of the animal currently?</p>
-        <label>
-          <input name="user-recommend" value="definitely" type="radio" class="input-radio" checked />
-          Extremely Critical
+        <label for="landmark">
+          Contact Number
+          <span class="hint">(optional)</span>
         </label>
-        <label>
-          <input name="user-recommend" value="maybe" type="radio" class="input-radio" />
-          Critical
-        </label>
-        <label>
-          <input name="user-recommend" value="no" type="radio" class="input-radio" />
-          Moderate health
-        </label>
-      </div>
-
-
-      <div class="form-group">
-        <label for="comment">Would you like to share any additional information about the stray animal's
-          condition?</label>
-        <textarea id="comment" class="input-textarea" name="comment"
-          placeholder="Enter your comment here..."></textarea>
+        <input type="tel" min="1" name="tel" id="tel" class="form-control" placeholder="+91 1023456789" />
       </div>
 
       <div class="form-group">
