--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <header class="text-gray-400 bg-gray-900 body-font flex flex-col items-start">
-    <div class="container mx-auto flex  p-5 items-center">
+    <div class="container flex pl-10 p-5 items-center">
       <a class="flex-auto grow-[0] pr-[25px]" href="#">
         <img class="rounded-full w-[80px] h-[80px]" src="./Assets/Images/logo.jpg" alt="logo" />
       </a>
@@ -21,10 +21,10 @@
         <span class="text-lg text-gray-400">Give life to a needed animal</span>
       </div>
     </div>
-    <nav class="flex flex-wrap items-center text-base justify-center p-5">
-        <a href="/" class="mr-5 hover:text-white">Home</a>
-        <a href="./donate.html" class="mr-5 hover:text-white">Donate Animals</a>
-        <a href="./reportstary.html" class="mr-5 hover:text-white">SOS Report</a>
+    <nav class="flex flex-wrap items-center text-base justify-center pl-10 p-5">
+      <a href="/" class="mr-5 hover:text-white">Home</a>
+      <a href="./donate.html" class="mr-5 hover:text-white">Donate Animals</a>
+      <a href="./reportstary.html" class="mr-5 hover:text-white">SOS Report</a>
       <a href="#contact">
         <button
           class="inline-flex items-center bg-gray-800 border-0 py-1 px-3 focus:outline-none hover:bg-gray-700 rounded text-base mt-4 md:mt-0">Contact
@@ -39,14 +39,14 @@
   </header>
   <section class=" flex flex-wrap justify-center items-center gap-2 px-2 py-12 flex-auto">
     <div class="rounded-lg shadow-lg bg-white max-w-xs">
-      <a href="#">
-        <img class="rounded-t-lg" src="Assets/Images/goldern-ret.jpg" alt="" />
+      <a href="#" class="">
+        <img class="rounded-t-lg w-[320px] h-[255px]" src="Assets/Images/goldern-ret.jpg" alt="" />
       </a>
       <div class="p-4 flex flex-col gap-2">
         <h5 class="text-gray-900 md:text-[40px] font-bold mb-2 text-center">Bongo</h5>
         <ul class=" grid sm:grid-cols-2 gap-5">
           <li class=" flex gap-2 text-xl justify-self-center">
-            <img class=" w-5 h-auto" src="Assets/Images/dog-icon.svg"  alt="">
+            <img class=" w-5 h-auto" src="Assets/Images/dog-icon.svg" alt="">
             <span>Dog</span>
           </li>
           <li class=" flex text-xl justify-self-center">
@@ -66,14 +66,15 @@
             <span>Delhi</span>
           </li>
         </ul>
-        <button type="button"
-          class=" self-center border-2 bg-gray-800 rounded-lg py-3 px-16 mt-3 text-white hover:text-gray-300 ">Adopt
-          me</button>
+        <a class="self-center" href="adopt.html">
+          <button type="button"
+            class="border-2 bg-gray-800 rounded-lg py-3 px-16 mt-3 text-white hover:text-gray-300 ">Adopt
+            me</button>
       </div>
     </div>
     <div class="rounded-lg shadow-lg bg-white max-w-xs">
       <a href="#">
-        <img class="rounded-t-lg" src="Assets/Images/pug.jpg" height=300 width=385 alt="" />
+        <img class="rounded-t-lg w-[320px] h-[255px]" src="Assets/Images/pug.jpg" alt="" />
       </a>
       <div class="p-4 flex flex-col gap-2">
         <h5 class="text-gray-900 md:text-[40px] font-bold mb-2 text-center">Roblet</h5>
@@ -99,14 +100,15 @@
             <span>Lucknow</span>
           </li>
         </ul>
-        <button type="button"
-          class=" self-center border-2 bg-gray-800 rounded-lg py-3 px-16 mt-3 text-white hover:text-gray-300 ">Adopt
-          me</button>
+        <a class="self-center" href="adopt.html">
+          <button type="button"
+            class="border-2 bg-gray-800 rounded-lg py-3 px-16 mt-3 text-white hover:text-gray-300 ">Adopt
+            me</button>
       </div>
     </div>
     <div class="rounded-lg shadow-lg bg-white max-w-xs">
       <a href="#">
-        <img class="rounded-t-lg" src="Assets/Images/husky.jpg" height=500 width=400 alt="" />
+        <img class="rounded-t-lg w-[320px] h-[255px]" src="Assets/Images/husky.jpg" alt="" />
       </a>
       <div class="p-4 flex flex-col gap-2">
         <h5 class="text-gray-900 md:text-[40px] font-bold mb-2 text-center">Sipper</h5>
@@ -132,20 +134,21 @@
             <span>Kashmir</span>
           </li>
         </ul>
-        <button type="button"
-          class=" self-center border-2 bg-gray-800 rounded-lg py-3 px-16 mt-3 text-white hover:text-gray-300 ">Adopt
-          me</button>
+        <a class="self-center" href="adopt.html">
+          <button type="button"
+            class="border-2 bg-gray-800 rounded-lg py-3 px-16 mt-3 text-white hover:text-gray-300 ">Adopt
+            me</button>
       </div>
     </div>
     <div class="rounded-lg shadow-lg bg-white max-w-xs">
       <a href="#">
-        <img class="rounded-t-lg" src="Assets/Images/ragdo.jpg" height=315 width=250 alt="" />
+        <img class="rounded-t-lg w-[320px] h-[255px]" src="Assets/Images/ragdo.jpg" alt="" />
       </a>
       <div class="p-4 flex flex-col gap-2">
         <h5 class="text-gray-900 md:text-[40px] font-bold mb-2 text-center">Russia</h5>
         <ul class=" grid sm:grid-cols-2 gap-5">
           <li class=" flex gap-2 text-xl justify-self-center">
-            <img class=" w-5 h-auto" src="Assets/Images/cat.png"  alt="">
+            <img class=" w-5 h-auto" src="Assets/Images/cat.png" alt="">
             <span>Cat</span>
           </li>
           <li class=" flex text-xl justify-self-center">
@@ -165,14 +168,15 @@
             <span>Karnataka</span>
           </li>
         </ul>
-        <button type="button"
-          class=" self-center border-2 bg-gray-800 rounded-lg py-3 px-16 mt-3 text-white hover:text-gray-300 ">Adopt
-          me</button>
+        <a class="self-center" href="adopt.html">
+          <button type="button"
+            class="border-2 bg-gray-800 rounded-lg py-3 px-16 mt-3 text-white hover:text-gray-300 ">Adopt
+            me</button>
       </div>
     </div>
     <div class="rounded-lg shadow-lg bg-white max-w-xs">
       <a href="#">
-        <img class="rounded-t-lg" src="Assets/Images/persian.webp" height=300 width=385 alt="" />
+        <img class="rounded-t-lg w-[320px] h-[255px]" src="Assets/Images/persian.webp" alt="" />
       </a>
       <div class="p-4 flex flex-col gap-2">
         <h5 class="text-gray-900 md:text-[40px] font-bold mb-2 text-center">Zombo</h5>
@@ -198,14 +202,15 @@
             <span>Kanpur</span>
           </li>
         </ul>
-        <button type="button"
-          class=" self-center border-2 bg-gray-800 rounded-lg py-3 px-16 mt-3 text-white hover:text-gray-300 ">Adopt
-          me</button>
+        <a class="self-center" href="adopt.html">
+          <button type="button"
+            class="border-2 bg-gray-800 rounded-lg py-3 px-16 mt-3 text-white hover:text-gray-300 ">Adopt
+            me</button>
       </div>
     </div>
     <div class="rounded-lg shadow-lg bg-white max-w-xs">
       <a href="#">
-        <img class="rounded-t-lg" src="Assets/Images/angora.jpg" height=500 width=400 alt="" />
+        <img class="rounded-t-lg w-[320px] h-[255px]" src="Assets/Images/angora.jpg" alt="" />
       </a>
       <div class="p-4 flex flex-col gap-2">
         <h5 class="text-gray-900 md:text-[40px] font-bold mb-2 text-center">Riksy</h5>
@@ -231,9 +236,80 @@
             <span>Kashmir</span>
           </li>
         </ul>
-        <button type="button"
-          class=" self-center border-2 bg-gray-800 rounded-lg py-3 px-16 mt-3 text-white hover:text-gray-300 ">Adopt
-          me</button>
+        <a class="self-center" href="adopt.html">
+          <button type="button"
+            class="border-2 bg-gray-800 rounded-lg py-3 px-16 mt-3 text-white hover:text-gray-300 ">Adopt
+            me</button>
+      </div>
+    </div>
+    <div class="rounded-lg shadow-lg bg-white max-w-xs">
+      <a href="#">
+        <img class="rounded-t-lg w-[320px] h-[255px]" src="Assets/Images/german.jpg" alt="" />
+      </a>
+      <div class="p-4 flex flex-col gap-2">
+        <h5 class="text-gray-900 md:text-[40px] font-bold mb-2 text-center">Sheru</h5>
+        <ul class=" grid sm:grid-cols-2 gap-5">
+          <li class=" flex gap-2 text-xl justify-self-center">
+            <img class=" w-5 h-auto" src="Assets/Images/dog-icon.svg" alt="">
+            <span>Dog</span>
+          </li>
+          <li class=" flex text-xl justify-self-center">
+            <span>5 years</span>
+          </li>
+          <li class=" flex text-xl justify-self-center">
+            <span>Male</span>
+          </li>
+          <li class=" flex text-xl justify-self-center">
+            <span>G-Shepherd</span>
+          </li>
+          <li class=" flex text-xl justify-self-center">
+            <span>Black</span>
+          </li>
+          <li class=" flex gap-2 text-xl justify-self-center">
+            <img class=" w-5 h-auto" src="Assets/Images/loation-icon.svg" alt="">
+            <span>Kolkata</span>
+          </li>
+        </ul>
+        <a class="self-center" href="adopt.html">
+          <button type="button"
+            class="border-2 bg-gray-800 rounded-lg py-3 px-16 mt-3 text-white hover:text-gray-300 ">Adopt
+            me</button>
+        </a>
+      </div>
+    </div>
+    <div class="rounded-lg shadow-lg bg-white max-w-xs">
+      <a href="#">
+        <img class="rounded-t-lg w-[320px] h-[255px]" src="Assets/Images/porme.jpg" alt="" />
+      </a>
+      <div class="p-4 flex flex-col gap-2">
+        <h5 class="text-gray-900 md:text-[40px] font-bold mb-2 text-center">Swaggy</h5>
+        <ul class=" grid sm:grid-cols-2 gap-5">
+          <li class=" flex gap-2 text-xl justify-self-center">
+            <img class=" w-5 h-auto" src="Assets/Images/dog-icon.svg" alt="">
+            <span>Dog</span>
+          </li>
+          <li class=" flex text-xl justify-self-center">
+            <span>2 years</span>
+          </li>
+          <li class=" flex text-xl justify-self-center">
+            <span>Female</span>
+          </li>
+          <li class=" flex text-xl justify-self-center">
+            <span>Pomeranian</span>
+          </li>
+          <li class=" flex text-xl justify-self-center">
+            <span>White</span>
+          </li>
+          <li class=" flex gap-2 text-xl justify-self-center">
+            <img class=" w-5 h-auto" src="Assets/Images/loation-icon.svg" alt="">
+            <span>Kashmir</span>
+          </li>
+        </ul>
+        <a class="self-center" href="adopt.html">
+          <button type="button"
+            class="border-2 bg-gray-800 rounded-lg py-3 px-16 mt-3 text-white hover:text-gray-300 ">Adopt
+            me</button>
+        </a>
       </div>
     </div>
   </section>
