Navbar link fixes

--- a/donate.html
+++ b/donate.html
@@ -22,10 +22,10 @@
       </div>
     </div>
     <nav class="flex flex-wrap items-center text-base justify-center p-5">
-      <a href="/" class="mr-5 hover:text-white">Home</a>
+      <a href="./index.html" class="mr-5 hover:text-white">Home</a>
       <a href="./donate.html" class="mr-5 hover:text-white">Donate Animals</a>
       <a href="./reportstary.html" class="mr-5 hover:text-white">Emergency Report</a>
-      <a href="#contact">
+      <a href="./index.html#contact">
         <button
           class="inline-flex items-center bg-gray-800 border-0 py-1 px-3 focus:outline-none hover:bg-gray-700 rounded text-base mt-4 md:mt-0">Contact
           Us
