--- a/index.html
+++ b/index.html
@@ -334,6 +334,30 @@
       </div>
     </div>
   </section>
+      <!-- Footer section  -->
+
+  <footer class="footer text-gray-400 bg-gray-900 body-font flex justify-center">
+      <div class="container flex pl-10 p-5 items-center  ml-3">
+        <a class="flex-auto grow-[0] pr-[25px]" href="#">
+          <img class="rounded-full w-[80px] h-[80px]" src="./Assets/Images/logo.jpg" alt="logo" />
+        </a>
+        <div class="flex flex-col justify-start flex-auto grow-[2]">
+          <span class="text-4xl text-gray-100 pb-[8px]">Adopt today</span>
+          <span class="text-lg text-gray-400">Give life to a needed animal</span>
+        </div>
+      </div>
+      <div class="container flex justify-center items-center ">
+        <a href="#" class=" w-10 ml-3">
+          <img src="Assets/Images/facebook-icon.png" alt="">
+        </a>
+        <a href="#" class=" w-10 ml-3 mr-3">
+          <img src="Assets/Images/instagram-icon.png" alt="">
+        </a>
+        <a href="https://github.com/akshitagupta15june/PetMe" target="_blank" class=" w-10">
+          <img src="Assets/Images/github-icon.png" alt="">
+        </a>
+      </div>
+  </footer>
 
 
   <!--     Contact us section html starts from here -->
