Add a cool background related to pets in this website

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
       </div>
     </nav>
   </header>
-  <section class=" flex flex-wrap justify-center items-center gap-2 px-2 py-12 flex-auto">
-    <div class="rounded-lg shadow-lg bg-white max-w-xs">
+  <section class="bg flex flex-wrap justify-center items-center gap-2 px-2 py-12 flex-auto">
+    <div class="op op rounded-lg shadow-lg bg-white max-w-xs">
       <a href="#" class="">
         <img class="rounded-t-lg w-[320px] h-[255px]" src="Assets/Images/goldern-ret.jpg" alt="" />
       </a>
@@ -93,7 +93,7 @@
             me</button>
       </div>
     </div>
-    <div class="rounded-lg shadow-lg bg-white max-w-xs">
+    <div class="op rounded-lg shadow-lg bg-white max-w-xs">
       <a href="#">
         <img class="rounded-t-lg w-[320px] h-[255px]" src="Assets/Images/pug.jpg" alt="" />
       </a>
@@ -127,7 +127,7 @@
             me</button>
       </div>
     </div>
-    <div class="rounded-lg shadow-lg bg-white max-w-xs">
+    <div class="op rounded-lg shadow-lg bg-white max-w-xs">
       <a href="#">
         <img class="rounded-t-lg w-[320px] h-[255px]" src="Assets/Images/husky.jpg" alt="" />
       </a>
@@ -161,7 +161,7 @@
             me</button>
       </div>
     </div>
-    <div class="rounded-lg shadow-lg bg-white max-w-xs">
+    <div class="op rounded-lg shadow-lg bg-white max-w-xs">
       <a href="#">
         <img class="rounded-t-lg w-[320px] h-[255px]" src="Assets/Images/ragdo.jpg" alt="" />
       </a>
@@ -195,7 +195,7 @@
             me</button>
       </div>
     </div>
-    <div class="rounded-lg shadow-lg bg-white max-w-xs">
+    <div class="op rounded-lg shadow-lg bg-white max-w-xs">
       <a href="#">
         <img class="rounded-t-lg w-[320px] h-[255px]" src="Assets/Images/persian.webp" alt="" />
       </a>
@@ -229,7 +229,7 @@
             me</button>
       </div>
     </div>
-    <div class="rounded-lg shadow-lg bg-white max-w-xs">
+    <div class="op rounded-lg shadow-lg bg-white max-w-xs">
       <a href="#">
         <img class="rounded-t-lg w-[320px] h-[255px]" src="Assets/Images/angora.jpg" alt="" />
       </a>
@@ -263,7 +263,7 @@
             me</button>
       </div>
     </div>
-    <div class="rounded-lg shadow-lg bg-white max-w-xs">
+    <div class="op rounded-lg shadow-lg bg-white max-w-xs">
       <a href="#">
         <img class="rounded-t-lg w-[320px] h-[255px]" src="Assets/Images/german.jpg" alt="" />
       </a>
@@ -298,7 +298,7 @@
         </a>
       </div>
     </div>
-    <div class="rounded-lg shadow-lg bg-white max-w-xs">
+    <div class="op rounded-lg shadow-lg bg-white max-w-xs">
       <a href="#">
         <img class="rounded-t-lg w-[320px] h-[255px]" src="Assets/Images/porme.jpg" alt="" />
       </a>
