Fix The Alignment In Cards

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<!Doctype html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -27,7 +27,7 @@
       class="absolute top-4 right-4 sm:inline-flex sm:items-center p-2 text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600 z-10"
       aria-controls="navbar-default" aria-expanded="false" id="nav-button">
       <span class="sr-only">Open main menu</span>
-      <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
+      <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewbox="0 0 20 20"
         xmlns="http://www.w3.org/2000/svg">
         <path fill-rule="evenodd"
           d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
@@ -48,7 +48,7 @@
                 class="inline-flex items-center bg-blue-200 hover:bg-blue-100 border-0 py-4 px-2 focus:outline-none text-gray-800 font-bold rounded text-base mt-4 md:mt-0">
                 Contact Us
                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                  class="w-4 h-4 ml-1" viewBox="0 0 24 24">
+                  class="w-4 h-4 ml-1" viewbox="0 0 24 24">
                   <path d="M5 12h14M12 5l7 7-7 7"></path>
                 </svg>
               </button>
@@ -90,7 +90,7 @@
         <a class="self-center" href="adopt.html">
           <button type="button"
             class="border-2 bg-gray-800 rounded-lg py-3 px-16 mt-3 text-white hover:text-gray-300 ">Adopt
-            me</button>
+            me</button></a>
       </div>
     </div>
     <div class="op rounded-lg shadow-lg bg-white max-w-xs">
@@ -124,7 +124,7 @@
         <a class="self-center" href="adopt.html">
           <button type="button"
             class="border-2 bg-gray-800 rounded-lg py-3 px-16 mt-3 text-white hover:text-gray-300 ">Adopt
-            me</button>
+            me</button></a>
       </div>
     </div>
     <div class="op rounded-lg shadow-lg bg-white max-w-xs">
@@ -158,7 +158,7 @@
         <a class="self-center" href="adopt.html">
           <button type="button"
             class="border-2 bg-gray-800 rounded-lg py-3 px-16 mt-3 text-white hover:text-gray-300 ">Adopt
-            me</button>
+            me</button></a>
       </div>
     </div>
     <div class="op rounded-lg shadow-lg bg-white max-w-xs">
@@ -192,7 +192,7 @@
         <a class="self-center" href="adopt.html">
           <button type="button"
             class="border-2 bg-gray-800 rounded-lg py-3 px-16 mt-3 text-white hover:text-gray-300 ">Adopt
-            me</button>
+            me</button></a>
       </div>
     </div>
     <div class="op rounded-lg shadow-lg bg-white max-w-xs">
@@ -226,7 +226,7 @@
         <a class="self-center" href="adopt.html">
           <button type="button"
             class="border-2 bg-gray-800 rounded-lg py-3 px-16 mt-3 text-white hover:text-gray-300 ">Adopt
-            me</button>
+            me</button></a>
       </div>
     </div>
     <div class="op rounded-lg shadow-lg bg-white max-w-xs">
@@ -260,7 +260,7 @@
         <a class="self-center" href="adopt.html">
           <button type="button"
             class="border-2 bg-gray-800 rounded-lg py-3 px-16 mt-3 text-white hover:text-gray-300 ">Adopt
-            me</button>
+            me</button></a>
       </div>
     </div>
     <div class="op rounded-lg shadow-lg bg-white max-w-xs">
