--- a/index.html
+++ b/index.html
@@ -333,6 +333,14 @@
         </a>
       </div>
     </div>
+
+    <!-- SOS button -->
+    <div>
+      <form action="./reportstary.html" method="get" target="_blank">
+      <button  id="mySBtn" title="SOS">SOS</button></form>
+    </div>
+    <!--end of SOS button -->
+    
   </section>
      
 
