--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
   <title>PetMe</title>
 </head>
 
-<body>
-  <header class=" text-gray-400 bg-gray-900 body-font flex flex-row items-center justify-center lg:justify-around">
+<body class="dark">
+  <header class=" text-slate-800 dark:text-gray-400    bg-blue-300 dark:bg-gray-900   body-font flex flex-row items-center justify-center lg:justify-around">
     <div class="flex flex-col items-center md:flex-row md:items-center p-5">
       <a class="w-32" href="#">
         <img class="rounded-full" src="./Assets/Images/logo.jpg" alt="logo" />
       </a>
 
       <div class="w-full mt-8 md:mt-0">
-        <h1 class="text-4xl text-blue-200 text-center md:text-left md:ml-12 uppercase font-serif font-bold ">Adopt
+        <h1 class="text-4xl text-blue-600 dark:text-blue-200  text-center md:text-left md:ml-12 uppercase font-serif font-bold ">Adopt
           today!</h1>
-        <p class="text-lg text-gray-400 text-center md:text-left md:ml-12 mt-2">Give life to a needed animal</p>
+        <p class="text-lg text-slate-800 dark:text-gray-400    text-center md:text-left md:ml-12 mt-2">Give life to a needed animal</p>
       </div>
     </div>
     <button data-collapse-toggle="navbar-default" type="button"
-      class="absolute top-4 right-4 sm:inline-flex sm:items-center p-2 text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600 z-10"
+      class="absolute top-4 right-4 sm:inline-flex sm:items-center p-2 text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-slate-800 dark:text-gray-400    dark:hover:bg-gray-700 dark:focus:ring-gray-600 z-10"
       aria-controls="navbar-default" aria-expanded="false" id="nav-button">
       <span class="sr-only">Open main menu</span>
       <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
@@ -38,14 +38,14 @@
       <div class="hidden w-full lg:block z-0" id="navbar">
         <ul
           class="absolute w-full h-1/2 top-0 right-0 p-4 text-center space-y-8 lg:space-y-0 lg:space-x-3 lg:static lg:w-auto flex flex-col bg-gray-800 rounded-lg border border-gray-100 items-center lg:bg-transparent lg:border-0 lg:flex-row justify-center">
-          <li><a href="./index.html" class="p-3 text-white font-bold hover:underline underline-offset-4">Home</a></li>
-          <li><a href="./donate.html" class="p-3 text-white font-bold hover:underline underline-offset-4">Donate
+          <li><a href="./index.html" class="p-3 dark:text-slate-50  text-slate-50 dark:text-gray-900    font-bold hover:underline underline-offset-4">Home</a></li>
+          <li><a href="./donate.html" class="p-3 dark:text-slate-50  text-slate-50 dark:text-gray-900    font-bold hover:underline underline-offset-4">Donate
               Animals</a></li>
-          <li><a href="./reportstary.html" class="p-3 text-white font-bold hover:underline underline-offset-4">SOS
+          <li><a href="./reportstary.html" class="p-3 dark:text-slate-50  text-slate-50 dark:text-gray-900    font-bold hover:underline underline-offset-4">SOS
               Report</a></li>
           <li><a href="#contact">
               <button
-                class="inline-flex items-center bg-blue-200 hover:bg-blue-100 border-0 py-4 px-2 focus:outline-none text-gray-800 font-bold rounded text-base mt-4 md:mt-0">
+                class="inline-flex items-center bg-blue-600 dark:bg-blue-200   hover:bg-blue-100 border-0 py-4 px-2 focus:outline-none text-slate-50 dark:text-gray-900  hover:text-gray-900  font-bold rounded text-base mt-4 md:mt-0">
                 Contact Us
                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                   class="w-4 h-4 ml-1" viewBox="0 0 24 24">
@@ -54,17 +54,25 @@
               </button>
             </a>
           </li>
+          <li>
+            <!-- add an icon instead of text -->
+            <button id="theme-toggle" class=" text-slate-50 dark:text-gray-900">
+              Toggle Theme
+            </button>
+          </li>
         </ul>
+        <br>
       </div>
+      
     </nav>
   </header>
   <section class="bg flex flex-wrap justify-center items-center gap-2 px-2 py-12 flex-auto">
-    <div class="op op rounded-lg shadow-lg bg-white max-w-xs">
+    <div class="op op rounded-lg shadow-lg bg-slate-50 dark:bg-slate-400   max-w-xs">
       <a href="#" class="">
         <img class="rounded-t-lg w-[320px] h-[255px]" src="Assets/Images/goldern-ret.jpg" alt="" />
       </a>
       <div class="p-4 flex flex-col gap-2">
-        <h5 class="text-gray-900 md:text-[40px] font-bold mb-2 text-center">Bongo</h5>
+        <h5 class="text-gray-900 dark:text-slate-50   md:text-[40px] font-bold mb-2 text-center">Bongo</h5>
         <ul class=" grid sm:grid-cols-2 gap-5">
           <li class=" flex gap-2 text-xl justify-self-center">
             <img class=" w-5 h-auto" src="Assets/Images/dog-icon.svg" alt="">
@@ -89,16 +97,16 @@
         </ul>
         <a class="self-center" href="adopt.html">
           <button type="button"
-            class="border-2 bg-gray-800 rounded-lg py-3 px-16 mt-3 text-white hover:text-gray-300 ">Adopt
+            class="border-2 bg-gray-800 rounded-lg py-3 px-16 mt-3 dark:text-slate-50  text-slate-50 dark:text-gray-900    hover:text-gray-300 ">Adopt
             me</button>
       </div>
     </div>
-    <div class="op rounded-lg shadow-lg bg-white max-w-xs">
+    <div class="op rounded-lg shadow-lg bg-slate-50 dark:bg-slate-400   max-w-xs">
       <a href="#">
         <img class="rounded-t-lg w-[320px] h-[255px]" src="Assets/Images/pug.jpg" alt="" />
       </a>
       <div class="p-4 flex flex-col gap-2">
-        <h5 class="text-gray-900 md:text-[40px] font-bold mb-2 text-center">Roblet</h5>
+        <h5 class="text-gray-900 dark:text-slate-50   md:text-[40px] font-bold mb-2 text-center">Roblet</h5>
         <ul class=" grid sm:grid-cols-2 gap-5">
           <li class=" flex gap-2 text-xl justify-self-center">
             <img class=" w-5 h-auto" src="Assets/Images/dog-icon.svg" alt="">
@@ -123,16 +131,16 @@
         </ul>
         <a class="self-center" href="adopt.html">
           <button type="button"
-            class="border-2 bg-gray-800 rounded-lg py-3 px-16 mt-3 text-white hover:text-gray-300 ">Adopt
+            class="border-2 bg-gray-800 rounded-lg py-3 px-16 mt-3 dark:text-slate-50  text-slate-50 dark:text-gray-900    hover:text-gray-300 ">Adopt
             me</button>
       </div>
     </div>
-    <div class="op rounded-lg shadow-lg bg-white max-w-xs">
+    <div class="op rounded-lg shadow-lg bg-slate-50 dark:bg-slate-400   max-w-xs">
       <a href="#">
         <img class="rounded-t-lg w-[320px] h-[255px]" src="Assets/Images/husky.jpg" alt="" />
       </a>
       <div class="p-4 flex flex-col gap-2">
-        <h5 class="text-gray-900 md:text-[40px] font-bold mb-2 text-center">Sipper</h5>
+        <h5 class="text-gray-900 dark:text-slate-50   md:text-[40px] font-bold mb-2 text-center">Sipper</h5>
         <ul class=" grid sm:grid-cols-2 gap-5">
           <li class=" flex gap-2 text-xl justify-self-center">
             <img class=" w-5 h-auto" src="Assets/Images/dog-icon.svg" alt="">
@@ -157,16 +165,16 @@
         </ul>
         <a class="self-center" href="adopt.html">
           <button type="button"
-            class="border-2 bg-gray-800 rounded-lg py-3 px-16 mt-3 text-white hover:text-gray-300 ">Adopt
+            class="border-2 bg-gray-800 rounded-lg py-3 px-16 mt-3 dark:text-slate-50  text-slate-50 dark:text-gray-900    hover:text-gray-300 ">Adopt
             me</button>
       </div>
     </div>
-    <div class="op rounded-lg shadow-lg bg-white max-w-xs">
+    <div class="op rounded-lg shadow-lg bg-slate-50 dark:bg-slate-400   max-w-xs">
       <a href="#">
         <img class="rounded-t-lg w-[320px] h-[255px]" src="Assets/Images/ragdo.jpg" alt="" />
       </a>
       <div class="p-4 flex flex-col gap-2">
-        <h5 class="text-gray-900 md:text-[40px] font-bold mb-2 text-center">Russia</h5>
+        <h5 class="text-gray-900 dark:text-slate-50   md:text-[40px] font-bold mb-2 text-center">Russia</h5>
         <ul class=" grid sm:grid-cols-2 gap-5">
           <li class=" flex gap-2 text-xl justify-self-center">
             <img class=" w-5 h-auto" src="Assets/Images/cat.png" alt="">
@@ -191,16 +199,16 @@
         </ul>
         <a class="self-center" href="adopt.html">
           <button type="button"
-            class="border-2 bg-gray-800 rounded-lg py-3 px-16 mt-3 text-white hover:text-gray-300 ">Adopt
+            class="border-2 bg-gray-800 rounded-lg py-3 px-16 mt-3 dark:text-slate-50  text-slate-50 dark:text-gray-900    hover:text-gray-300 ">Adopt
             me</button>
       </div>
     </div>
-    <div class="op rounded-lg shadow-lg bg-white max-w-xs">
+    <div class="op rounded-lg shadow-lg bg-slate-50 dark:bg-slate-400   max-w-xs">
       <a href="#">
         <img class="rounded-t-lg w-[320px] h-[255px]" src="Assets/Images/persian.webp" alt="" />
       </a>
       <div class="p-4 flex flex-col gap-2">
-        <h5 class="text-gray-900 md:text-[40px] font-bold mb-2 text-center">Zombo</h5>
+        <h5 class="text-gray-900 dark:text-slate-50   md:text-[40px] font-bold mb-2 text-center">Zombo</h5>
         <ul class=" grid sm:grid-cols-2 gap-5">
           <li class=" flex gap-2 text-xl justify-self-center">
             <img class=" w-5 h-auto" src="Assets/Images/cat.png" alt="">
@@ -225,16 +233,16 @@
         </ul>
         <a class="self-center" href="adopt.html">
           <button type="button"
-            class="border-2 bg-gray-800 rounded-lg py-3 px-16 mt-3 text-white hover:text-gray-300 ">Adopt
+            class="border-2 bg-gray-800 rounded-lg py-3 px-16 mt-3 dark:text-slate-50  text-slate-50 dark:text-gray-900    hover:text-gray-300 ">Adopt
             me</button>
       </div>
     </div>
-    <div class="op rounded-lg shadow-lg bg-white max-w-xs">
+    <div class="op rounded-lg shadow-lg bg-slate-50 dark:bg-slate-400   max-w-xs">
       <a href="#">
         <img class="rounded-t-lg w-[320px] h-[255px]" src="Assets/Images/angora.jpg" alt="" />
       </a>
       <div class="p-4 flex flex-col gap-2">
-        <h5 class="text-gray-900 md:text-[40px] font-bold mb-2 text-center">Riksy</h5>
+        <h5 class="text-gray-900 dark:text-slate-50   md:text-[40px] font-bold mb-2 text-center">Riksy</h5>
         <ul class=" grid sm:grid-cols-2 gap-5">
           <li class=" flex gap-2 text-xl justify-self-center">
             <img class=" w-5 h-auto" src="Assets/Images/rabbit.png" alt="">
@@ -259,16 +267,16 @@
         </ul>
         <a class="self-center" href="adopt.html">
           <button type="button"
-            class="border-2 bg-gray-800 rounded-lg py-3 px-16 mt-3 text-white hover:text-gray-300 ">Adopt
+            class="border-2 bg-gray-800 rounded-lg py-3 px-16 mt-3 dark:text-slate-50  text-slate-50 dark:text-gray-900    hover:text-gray-300 ">Adopt
             me</button>
       </div>
     </div>
-    <div class="op rounded-lg shadow-lg bg-white max-w-xs">
+    <div class="op rounded-lg shadow-lg bg-slate-50 dark:bg-slate-400   max-w-xs">
       <a href="#">
         <img class="rounded-t-lg w-[320px] h-[255px]" src="Assets/Images/german.jpg" alt="" />
       </a>
       <div class="p-4 flex flex-col gap-2">
-        <h5 class="text-gray-900 md:text-[40px] font-bold mb-2 text-center">Sheru</h5>
+        <h5 class="text-gray-900 dark:text-slate-50   md:text-[40px] font-bold mb-2 text-center">Sheru</h5>
         <ul class=" grid sm:grid-cols-2 gap-5">
           <li class=" flex gap-2 text-xl justify-self-center">
             <img class=" w-5 h-auto" src="Assets/Images/dog-icon.svg" alt="">
@@ -293,17 +301,17 @@
         </ul>
         <a class="self-center" href="adopt.html">
           <button type="button"
-            class="border-2 bg-gray-800 rounded-lg py-3 px-16 mt-3 text-white hover:text-gray-300 ">Adopt
+            class="border-2 bg-gray-800 rounded-lg py-3 px-16 mt-3 dark:text-slate-50  text-slate-50 dark:text-gray-900    hover:text-gray-300 ">Adopt
             me</button>
         </a>
       </div>
     </div>
-    <div class="op rounded-lg shadow-lg bg-white max-w-xs">
+    <div class="op rounded-lg shadow-lg bg-slate-50 dark:bg-slate-400   max-w-xs">
       <a href="#">
         <img class="rounded-t-lg w-[320px] h-[255px]" src="Assets/Images/porme.jpg" alt="" />
       </a>
       <div class="p-4 flex flex-col gap-2">
-        <h5 class="text-gray-900 md:text-[40px] font-bold mb-2 text-center">Swaggy</h5>
+        <h5 class="text-gray-900 dark:text-slate-50   md:text-[40px] font-bold mb-2 text-center">Swaggy</h5>
         <ul class=" grid sm:grid-cols-2 gap-5">
           <li class=" flex gap-2 text-xl justify-self-center">
             <img class=" w-5 h-auto" src="Assets/Images/dog-icon.svg" alt="">
@@ -328,7 +336,7 @@
         </ul>
         <a class="self-center" href="adopt.html">
           <button type="button"
-            class="border-2 bg-gray-800 rounded-lg py-3 px-16 mt-3 text-white hover:text-gray-300 ">Adopt
+            class="border-2 bg-gray-800 rounded-lg py-3 px-16 mt-3 dark:text-slate-50  text-slate-50 dark:text-gray-900    hover:text-gray-300 ">Adopt
             me</button>
         </a>
       </div>
@@ -365,14 +373,14 @@
       
        <!-- Footer section  -->
 
-  <footer class="footer text-gray-400 bg-gray-900 body-font flex justify-center">
+  <footer class="footer text-slate-800 dark:text-gray-400    bg-blue-300 dark:bg-gray-900   body-font flex justify-center">
       <div class="container flex pl-10 p-5 items-center  ml-3">
         <a class="flex-auto grow-[0] pr-[25px]" href="#">
           <img class="rounded-full w-[80px] h-[80px]" src="./Assets/Images/logo.jpg" alt="logo" />
         </a>
         <div class="flex flex-col justify-start flex-auto grow-[2]">
           <span class="text-4xl text-gray-100 pb-[8px]">Adopt today</span>
-          <span class="text-lg text-gray-400">Give life to a needed animal</span>
+          <span class="text-lg text-slate-800 dark:text-gray-400   ">Give life to a needed animal</span>
         </div>
       </div>
       <div class="container flex justify-center items-center ">
@@ -388,6 +396,7 @@
       </div>
   </footer>
   <script src="index.js" ></script>
+  <script src="light-dark-theme.js"></script>
 </body>
 
 </html>
