feat/Add contributors section

--- a/index.html
+++ b/index.html
@@ -362,7 +362,20 @@
   </section>
   <!--     Contact us section html ends here -->
       
-      
+   <!--Contributors section -->
+
+   <div class="contributors-container">
+    <h1>Our Contributors</h1>
+    <div class="contributors" id="contributors" >
+    </div>
+    <a href="https://github.com/akshitagupta15june/PetMe" target="_blank">
+    <button class="contribute-btn"> 
+      <img src="Assets/Images/github-icon.png" alt="GitHub">
+      Contribute </button></a>
+   </div>
+
+   <!-- Contributors section ends -->
+  
        <!-- Footer section  -->
 
   <footer class="footer text-gray-400 bg-gray-900 body-font flex justify-center">
